hotfix: 클러스터 기반 로직 변경 클러스터 7 최근 회원유저 3 으로 조회하여 시간(10초)기반 셔플로 로직 변경